feat: Implement viewer mode and project export
Introduce a production/viewer mode to render the application in a read-only state, hiding editor UI elements. This mode is activated via environment variables or URL parameters.

Add export functionality to the DataPanel, enabling the creation of a zip archive containing the project's JSON data and a basic React project structure suitable for deployment.

Update package.json with new scripts for viewer mode and Vercel deployment. Modify index.tsx to remove unused CSS import. Rename application in metadata.json. Add Viewer component and associated logic for mode detection. Add vercel.json for Vercel deployment configuration.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "homepage": ".",
   "scripts": {
     "dev": "vite",
+    "dev:viewer": "VITE_APP_MODE=production vite",
     "build": "vite build",
+    "build:production": "VITE_APP_MODE=production vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview:viewer": "VITE_APP_MODE=production vite preview",
+    "deploy": "gh-pages -d dist",
+    "deploy:vercel": "vercel --prod"
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
